--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,101 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Londrina+Solid:wght@100;300;400;900&display=swap');
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 700px) {
 
     .eyeLogoClass {
         left: 85% !important;
     }
+
+    .InformationFirst{
+        top: -30px;
+    }
+
+    .InformationSecond {
+        top: -75px;
+    }
+
+    .displayNone {
+        display:none;
+    }
+
+    .kalimatbagian1 {
+        font-size: 20px !important;
+    }
+
+    .isi1 {
+        margin-top: 75px !important;
+    }
+
+    .isi3 {
+        margin-top: 75px !important;
+        margin-left: 5vw;
+        margin-right: 5vw;
+        align-items: left !important;
+    }
+
+    .chillLogoLobby {
+        width: 120px !important;
+        height: 30px !important;
+    }
+
+    .usercontent1 {
+        flex-direction: column;
+        justify-items: left;
+    }
+
+    .displayFlexLobby1 {
+        height: 40% !important;
+    }
+
+    .imageSlider1{
+        overflow: visible;
+        overflow-x: scroll;
+        overflow-y:hidden;
+        scrollbar-width: none;
+        height: 50vw !important;
+    }  
+
+    .imagesliderthing1 {
+        width: 80vw !important;
+    }
+
+    .imageSlider2{
+        overflow: hidden;
+        overflow-x: scroll;
+        scrollbar-width: none;
+    }     
+
+    .allGenreClass {
+        display: none;
+      }
+
+      .footerLast {
+        flex-direction: column;
+        gap: 20px;
+        align-items:flex-start !important;
+      }
+
+      .genreList {
+        flex-direction: column;
+      }
+
+      .usercontent1-1 {
+        gap: 10px !important;
+      }
+
+      .popupMenuImage {
+        top: 0px !important;
+        left: 20px !important;
+        width: 50vw !important;
+        height: 40vw !important;
+        display: none !important;
+      }
+
+      .imagePopupMenu {
+        display: none !important;
+      }
+    
 
 }
 
@@ -13,12 +103,20 @@
     box-sizing: content-box;
     padding: 0px;
     margin: 0px;
-    
 }
 
 label {
     margin-bottom: 7px;
 }
+
+button {
+    outline: none !important;
+    box-shadow: none !important;
+  }
+  button:focus, button:active {
+    outline: none !important;
+    box-shadow: 100px !important;
+  }
 
 .containerBody {
     background: url('./form-login/assets/background chill.jpeg') rgba(0, 0, 0, 0.3);
@@ -40,17 +138,17 @@ label {
     color: white;
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     height: 100%;
     color: hsla(0, 0%, 100%, 1);
     font-family: 'lato';
-
+    position: relative;
 }
 
 form {
     background-color: hsla(203, 12%, 13%, 0.84);
     padding: 40px;
-    border: 2px solid yellow;
+    border: 2px solid hsla(203, 12%, 13%, 0.84);
     width: 75%;
     max-width: 400px;
     height: 70vh;
@@ -95,6 +193,16 @@ p {
     font-size: 16px;
     font-weight: 400;
     border-bottom: 1px solid transparent;
+}
+
+
+
+.linkClass:active {
+    all:unset;
+}
+
+.linkClass:visited {
+    all:unset;
 }
 
 .linkClass:hover {
@@ -229,8 +337,8 @@ p {
 
 .displayFlexLobby1 {
     margin: 20px;
-    margin-right: 75px;
-    margin-left: 75px;
+    margin-right: 3vw;
+    margin-left: 3vw;
     display: flex;
     justify-content: space-between;
     width: 90%;
@@ -242,7 +350,7 @@ p {
 .usercontent1 {
     display: flex;
     align-items: center;
-    gap: 100px;
+    gap: 5vw;
 }
 
 .usercontent1-1 {
@@ -285,7 +393,7 @@ p {
 
 .containerFirst {
     width: 100%;
-    height: 587px;
+    height: 100%;
     position: relative;
     z-index: 1;
 }
@@ -294,17 +402,18 @@ p {
     position: relative;
     background: url('./lobby/assets/bagian awal asli.png');
     background-color: black;
-    height: 300px;
+    height:10vw;
+    max-width: 100vw;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    padding-top: 400px;
-    padding-left: 100px;
+    padding-top: 30vw;
+    padding-left: 5vw;
     z-index: 0;
 }
 
 .InformationFirst {
-    margin-bottom: 20px;
+    margin-bottom: 40px;
     position: relative;
 }
 
@@ -312,7 +421,8 @@ p {
 .InformationSecond {
     display: flex;
     justify-content: space-between;
-    width: 95%
+    width: 95%;
+    position: relative;
 }
 
 .startButton {
@@ -408,6 +518,7 @@ p {
     pointer-events: none;
     flex-direction: column;
     justify-content: center;
+    transform: translateX(-50px);
 }
 
 .imageclass1 {
@@ -454,7 +565,6 @@ p {
     gap: 10px;
     align-items: center;
     position: relative;
-    overflow: visible;
   }
 
   .imageSlider2 {
@@ -462,11 +572,11 @@ p {
     gap: 50px;
     align-items: center;
     position: relative;
-    overflow: visible;
   }
 
   .imageWrapper {
     display: flex;
+    width: 100%;
     gap: 10px;
     align-items: center;
     position: relative;
@@ -481,7 +591,9 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    margin-left: 5vw;
+    margin-right: 10vw;
+    align-items: left;
     position: relative;
   }
 
@@ -498,7 +610,9 @@ p {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    margin-left: 5vw;
+    margin-right: 10vw;
+    align-items: left;
     position: relative;
   }
 
@@ -527,12 +641,12 @@ p {
   .imagesliderthing1 {
     width: 16vw;
     height: 100%;
-    opacity: 1;
+    opacity: 0.8;
     transition: opacity 0.1s ease-in-out;
   }
 
   .imagesliderthing.active {
-    opacity: 0.5;
+    opacity: 1;
   }
 
   .imagesliderthing1.active {
@@ -559,7 +673,7 @@ p {
   }
 
   .footerLast {
-    padding: 60px 80px;
+    padding: 5vw 5vw;
     margin-top: 60px;
     display: flex;
     width: 80%;
@@ -603,4 +717,116 @@ p {
 
   .customFooter {
     color: hsla(220, 2%, 76%, 1);
+  }
+
+  .unset {
+    all:unset;
+  }
+
+  .popupMenuImage {
+    border: 1px solid transparent;
+    padding-bottom: 1vw;
+    background-color: hsla(210, 8%, 10%, 1);
+    width: 30%;
+    border-radius: 20px;
+    visibility: hidden;
+    position: absolute;
+    top: 0px;
+    transform: translateX(-20px);
+    z-index: 999;
+    opacity: 0.4;
+    transition: opacity 0.2s ease-in-out;
+  }
+
+  .popupMenuVisible {
+    visibility: visible;
+    opacity: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .imagePopupMenu {
+    width: 100%;
+    height: 300px;
+    border-top-right-radius: 20px;
+    border-top-left-radius: 20px;
+    object-fit: cover;
+  }
+  
+  .PopupMenuFlex {
+    display: flex;
+    justify-content: space-between;
+    padding: 1vw;
+    align-items: center;
+  }
+
+  .genreStyle {
+    font-size: 1vw;
+  }
+
+  .PopupMenuFlexCustom {
+    display: flex;
+    gap: 1vw;
+    padding: 1vw;
+  }
+
+  .playClass {
+    width: 3.5vw;
+    cursor: pointer;
+  }
+
+  .checkButtonClass {
+    all: unset;
+    border: 1px solid hsla(225, 2%, 62%, 1);
+    border-radius: 48px;
+    width: 3.5vw;
+    height: 3.5vw;
+    text-align: center;
+    cursor: pointer;
+  }
+
+  .checkButtonClass:hover {
+    background-color: rgb(46, 50, 53);
+  }
+
+  .centeringClass {
+    display: flex;
+    gap: 1.5vw;
+    height: auto;
+  }
+
+  .exitbuttonClass {
+    all:unset;
+    color: white;
+    background-color: hsla(210, 8%, 10%, 1);
+    font-size: 2vw;
+    position: absolute;
+    border: 1px solid hsla(225, 2%, 62%, 1);
+    border-radius: 48px;
+    width: 3.5vw;
+    height: 3.5vw;
+    text-align: center;
+    transform: translate(-4.5vw, 1vw);
+    cursor: pointer;
+  }
+
+  .ageClass {
+    background-color: hsla(197, 100%, 90%, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 2.5vw;
+    height: 1.5vw;
+    font-size: 1vw;
+    border-radius: 24px;
+  }
+
+  .episodeClass {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 700;
+    font-size: 1vw;
+    height: 1.5vw;
+    border-radius: 24px;
   }
