--- a/src/index.css
+++ b/src/index.css
@@ -1016,6 +1016,14 @@ p {
     gap: 10px;
   }
 
+  .dropDownMenuSettings1Custom {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+  }
+
   .dropDownMenuSettings2 {
 
     display: flex;
@@ -1034,6 +1042,10 @@ p {
     border-radius: 24px;
     cursor: pointer;
     opacity: 0.7;
+  }
+
+  .customButtonOverride {
+    width: 290px !important;
   }
 
   .dropDownMenuSettings2 > button:hover {
@@ -1091,5 +1103,18 @@ p {
 
   .waitMoment {
     background-color: black;
+    width: 100vw;
+    height: 100vw;
     color: white;
+    opacity: 0.8;
+   
+  }
+
+  .doneMoment {
+    opacity: 0.5;
+    transition: opacity 0.2s ease-in-out;
+  }
+
+  .doneMoment.show {
+    opacity: 1;
   }
